--- a/ImageAnalyserApp/Base.lproj/Main.storyboard
+++ b/ImageAnalyserApp/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="box content view" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
@@ -709,32 +708,24 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="ImageAnalyserApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="1718" height="1434"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-Rn-xoT">
-                                <rect key="frame" x="20" y="240" width="1678" height="1174"/>
+                            <stackView distribution="fillEqually" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-Rn-xoT">
+                                <rect key="frame" x="20" y="240" width="2852" height="2348"/>
                                 <subviews>
-                                    <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wby-18-ndX">
-                                        <rect key="frame" x="0.0" y="0.0" width="496" height="1174"/>
+                                    <stackView distribution="fillEqually" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wby-18-ndX">
+                                        <rect key="frame" x="0.0" y="0.0" width="496" height="2348"/>
                                         <subviews>
                                             <imageView focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jCS-Tp-iPY">
-                                                <rect key="frame" x="-3" y="588" width="502" height="589"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Bln-TZ-aTV"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="YDR-BL-87H"/>
-                                                </constraints>
+                                                <rect key="frame" x="-3" y="1175" width="502" height="1176"/>
                                                 <imageCell key="cell" selectable="YES" refusesFirstResponder="YES" focusRingType="none" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="dZH-HK-pCQ"/>
                                             </imageView>
                                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HNt-Tx-QXf">
-                                                <rect key="frame" x="-3" y="-3" width="502" height="589"/>
+                                                <rect key="frame" x="-3" y="-3" width="502" height="1176"/>
                                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="Gld-Wn-JCn"/>
                                             </imageView>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="HNt-Tx-QXf" firstAttribute="width" secondItem="jCS-Tp-iPY" secondAttribute="width" id="0y3-np-WF1"/>
-                                            <constraint firstItem="HNt-Tx-QXf" firstAttribute="height" secondItem="jCS-Tp-iPY" secondAttribute="height" id="MVJ-B9-eIv"/>
-                                        </constraints>
                                         <visibilityPriorities>
                                             <integer value="1000"/>
                                             <integer value="1000"/>
@@ -745,16 +736,10 @@
                                         </customSpacing>
                                     </stackView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dOh-vD-8a9">
-                                        <rect key="frame" x="501" y="-3" width="1180" height="1180"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="dOh-vD-8a9" secondAttribute="height" multiplier="1:1" id="Cp9-a7-hrS"/>
-                                        </constraints>
+                                        <rect key="frame" x="501" y="-3" width="2354" height="2354"/>
                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="photo" id="P56-kQ-6ye"/>
                                     </imageView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="dOh-vD-8a9" firstAttribute="height" secondItem="wby-18-ndX" secondAttribute="height" id="RZM-7J-RAu"/>
-                                </constraints>
                                 <visibilityPriorities>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
@@ -765,15 +750,15 @@
                                 </customSpacing>
                             </stackView>
                             <box titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="wUd-uo-IuL">
-                                <rect key="frame" x="17" y="16" width="1684" height="206"/>
+                                <rect key="frame" x="17" y="16" width="2858" height="206"/>
                                 <view key="contentView" id="SOB-io-Hnc">
-                                    <rect key="frame" x="2" y="2" width="1680" height="202"/>
+                                    <rect key="frame" x="2" y="2" width="2854" height="202"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ojy-fI-n3s">
-                                            <rect key="frame" x="18" y="158" width="105" height="26"/>
+                                            <rect key="frame" x="18" y="158" width="76" height="26"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="100" id="6tm-vV-W8b"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="5au-UM-bJT"/>
                                             </constraints>
                                             <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="cYP-rr-qgJ" id="c31-MT-WRC">
                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -792,6 +777,7 @@
                                         </popUpButton>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ojy-fI-n3s" secondAttribute="trailing" constant="20" symbolic="YES" id="1zy-ch-ZdB"/>
                                         <constraint firstItem="ojy-fI-n3s" firstAttribute="top" secondItem="SOB-io-Hnc" secondAttribute="top" constant="20" id="OIG-21-DBR"/>
                                         <constraint firstItem="ojy-fI-n3s" firstAttribute="leading" secondItem="SOB-io-Hnc" secondAttribute="leading" constant="20" id="PO8-hj-nXR"/>
                                     </constraints>
@@ -820,7 +806,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="73" y="894.5"/>
+            <point key="canvasLocation" x="-246" y="720"/>
         </scene>
     </scenes>
 </document>
